Tue Jan 13 00:57:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sock_s_unpack_sockaddr_in): check too short
	  sockaddr.
	  (sock_s_unpack_sockaddr_un): ditto.

Mon Jan 12 17:23:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (assert_nothing_raised): removes the
	  current trace to get rid of an issue of MiniTest::Unit#location.

Mon Jan 12 16:49:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (install): erased a garbage.

Mon Jan 12 16:45:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (open_dir_handle): extracted from rb_w32_opendir.

	* win32/win32.c (winnt_stat): gets rid of strange behavior of
	  GetFileAttributes().  [ruby-core:21269]

Mon Jan 12 11:59:19 2009  Koichi Sasada  <ko1@atdot.net>

	* gc.c (ruby_xmalloc, ruby_xrealloc, ruby_xfree):
	  enable to use them without GVL.
	  if GC is invoked, acquire GVL during GC.
	  if NoMemoryError is raised, acquire GVL and raise it.

Mon Jan 12 10:39:19 2009  Koichi Sasada  <ko1@atdot.net>

	* thread.c: fix comment (terminology: Global VM Lock).

	* thread.c (blocking_region_begin, blocking_region_end):
	  save and clear th->blocking_region_buffer.

	* thread.c (rb_thread_call_with_gvl): check if it has GVL.

	* thread.c (ruby_thread_has_gvl_p): added.

	* vm_core.h: add decls.

Sun Jan 11 16:53:14 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (PercentScanner): remove PercentScanner. fixed % after
	  %> bug. [ruby-dev:37751] [Bug #997] 

	* test/erb/test_erb.rb: ditto

Sun Jan 11 09:47:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_s_create): set nil as the value if assoc length
	  is not enough.  [ruby-core:21249]

Sat Jan 10 20:26:17 2009  Tanaka Akira  <akr@fsij.org>

	* version.h: make version string succinct:
	  "ruby 1.9.1p5000 (2009-01-10 trunk 21414) [i686-linux]".

Sat Jan 10 19:05:13 2009  Koichi Sasada  <ko1@atdot.net>

	* cont.c (cont_restore_1): should not be inlined.
